project4tests/testprog2.err
testprog2.c: In function ‘main’:
testprog2.c:3:23: error: expected ‘)’ before ‘;’ token
    3 |         printf("hello";
      |               ~       ^
      |                       )
testprog2.c:4:17: error: invalid suffix "ia" on integer constant
    4 |         int x = 4ia;
      |                 ^~~
testprog2.c:5:18: error: expected ‘;’ before ‘}’ token
    5 |         return 0;
      |                  ^
      |                  ;
    6 | }
      | ~                 
